[package]
name = "gooseboy-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
env_logger = "0.11.9"
log = "0.4.29"
macroquad = "0.4.14"
fast-cell = { path = "./fast_cell" }
wasmtime = { version = "41.0.3", default-features = false, features = ["addr2line", "cache", "coredump", "cranelift", "debug-builtins", "demangle", "incremental-cache", "parallel-compilation", "pooling-allocator", "runtime"] }
parking_lot = "0.12.5"
